# aioadaptive

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/: CODEOWNERS
.github/workflows/: python-checks.yml  python-package.yml  release.yml
src/aioadaptive/: __init__.py
src/aioadaptive/client/: __init__.py  _adaptive_client.py
src/aioadaptive/limiter/: __init__.py  _limiter.py  _vegas.py
src/aiohttp_adaptive/: __init__.py
tests/: __init__.py
tests/client/: test_adaptive_client.py
tests/limiter/: test_vegas.py  test_vegas_integration.py
