[project]
name = "aioadaptive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jesse Saran", email = "8915311+swrap@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.14",
    "anyio>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.12.4",
    "pytest>=8.3.4",
    "pytest-asyncio>=1.1.0",
]

[tool.ruff]
indent-width = 4
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]

fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests}/*" = [
    "ARG001",   # Unused function argument
    "E722",     # Do not use bare except
    "INP001",   # File is part of an implicit namespace package
    "PLR2004",  # Magic value used in comparison
    "PT011",    # pytest.raises() should be used as a context manager
    "S101",     # Use of assert detected
    "SLF001",   # Private member accessed
    "D100",     # Missing docstring in public module
    "D101",
    "D102",
    "D103",     # Checks for undocumented public function definitions
    "ANN001",
    "ANN101",
    "ANN201",
    "TRY002",
    "TRY003",
    "EM001",
]
